infrastructure/routes/hubble-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "hubble.internal.mmontes.duckdns.org"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
