infrastructure/routes/traefik-external-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-external-basicauth
  namespace: networking
spec:
  basicAuth:
    secret: traefik-external-basicauth
    removeHeader: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-external
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.mmontes.duckdns.org`)
      middlewares:
        - name: traefik-external-basicauth
          namespace: networking
      services:
        - name: api@internal
          kind: TraefikService
