infrastructure/routes/traefik-internal-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-internal
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.internal.mmontes.duckdns.org`)
      services:
        - name: api@internal
          kind: TraefikService
